# EternalNight

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  todo.md  vcpkg.json
src/: game_input.cpp  game_input.h  game_logic.cpp  game_logic.h  game_render.cpp  game_render.h  inventory.cpp  inventory.h  main.cpp  multiplayer.cpp  multiplayer.h  multiplayer_types.h  player.cpp  player.h  server_main.cpp  world.cpp  world.h
src/engine/: camera.c  camera.h  forge.c  forge.h  forgesystem.c  forgesystem.h  input.c  input.h  perlin.h  renderer.c  renderer.h  renderer_d2d.cpp  renderer_d2d.h  rendertexture.c  rendertexture.h  shader.h  storage.c  storage.h  texture.h  timer.c  timer.h  vmath.h  window.c  window.h  worldgen.c  worldgen.h
src/net/: client.c  client.h  net.c  net.h  protocol.h  server.c  server.h
src/ui/: eternal_ui.cpp  eternal_ui.h  imgui_lite.cpp  imgui_lite.h  main_menu.cpp  main_menu.h  menu_background.cpp  menu_background.h  multiplayer_ui.cpp  multiplayer_ui.h
